ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2tier-ingress
  namespace: 2tier
spec:
  rules:
    - host: frontend.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
